--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title></title>
+    <title>index.knit</title>
     <meta charset="utf-8" />
+    <script src="immagini/header-attrs/header-attrs.js"></script>
     <link href="immagini/remark-css/default.css" rel="stylesheet" />
     <link href="immagini/remark-css/metropolis-fonts.css" rel="stylesheet" />
     <link rel="stylesheet" href="metropolis_ustat.css" type="text/css" />
@@ -28,9 +29,9 @@ class: title-slide clear
 
 ### Eric Stephani, Ufficio di statistica (USTAT)
 #### Dipartimento delle finanze e dell'economia
-#### Sezione delle risorse
+#### Divisione delle risorse
 
-##### *Bellinzona, novembre 2021*
+##### *Melide, 17 novembre 2021*
 
 
 ---
@@ -159,7 +160,7 @@ class: hide-logo, inverse, center, middle
 
 # Un esempio
 
-.font90[
+.font70[
 .left-column[
 #### .hl[Quanti] sono i disoccupati iscritti?
 
@@ -216,9 +217,10 @@ Chi pubblica i dati?  ]
 ]
 
 ---
+
 class: clear
 
-.font90[
+.font70[
 .left-column[
 #### Quanti sono i disoccupati iscritti?
 #### E in Ticino?
@@ -256,7 +258,7 @@ La domanda non è scorretta, ma ce n'è una .hl[più] urgente
 ---
 class: clear
 
-.font90[
+.font70[
 .left-column[
 #### Quanti sono i disoccupati iscritti?
 #### **.hl[Chi]** sono i disoccupati iscritti?
@@ -293,9 +295,10 @@ I *disoccupati iscritti* --&gt; [definizione](https://www3.ti.ch/DFE/DR/USTAT/in
 ]
 
 ---
+
 class: clear
 
-.font90[
+.font70[
 .left-column[
 #### Quanti sono i disoccupati iscritti?
 #### Chi sono i disoccupati iscritti?
@@ -310,9 +313,10 @@ class: clear
 ]
 
 ---
+
 class: clear
 
-.font90[
+.font70[
 .left-column[
 #### Quanti sono i disoccupati iscritti?
 #### Chi sono i disoccupati iscritti?
@@ -328,9 +332,10 @@ class: clear
 ]
 
 ---
+
 class: clear
 
-.font90[
+.font70[
 .left-column[
 #### Quanti sono i disoccupati iscritti?
 #### Chi sono i disoccupati iscritti?
@@ -372,8 +377,8 @@ class: hide-logo, inverse, center, middle
 
 .font60[
 16 settembre 2021,
-  [www.**cdt**.ch](https://www.cdt.ch/economia/disoccupazione-in-svizzera-piu-alta-che-in-germania-MK4639842?_sid=oxVetYDu
-) *"Disoccupazione in Svizzera più alta che in Germania"*
+  [www.**cdt**.ch: ](https://www.cdt.ch/economia/disoccupazione-in-svizzera-piu-alta-che-in-germania-MK4639842?_sid=oxVetYDu)
+*"Disoccupazione in Svizzera più alta che in Germania"*
 ]
 
 .font70[
@@ -384,18 +389,22 @@ class: hide-logo, inverse, center, middle
 
 
 ---
+
 class: hide-logo, inverse, center, middle
 
 # ~~Digitalizzazione~~, ~~automatizzazione~~, ~~*big data*~~ oppure, semplicemente, provare a .hl[**cambiare**]
 
 
 ---
+
 class: middle clear
+
 ### Come cambiare e perché ha senso cambiare
 
 .mid-warm-grey[
 .font80[
 Punto di partenza
+
 ]
 ]
 
@@ -408,6 +417,7 @@ Punto di partenza
 .hl[Voglio] dei dati che:
 - confermino la mia tesi  
 - nel caso, possa almeno dire: *tanto sono sbagliati!*
+
 ]
 ]
 
@@ -427,6 +437,7 @@ Applicare la *Regola delle 3C*:
 ]
 
 ---
+
 class: middle clear
 
 ### Risultato *ideale*
@@ -434,6 +445,7 @@ class: middle clear
 .mid-warm-grey[
 .font80[
 Orizzonte
+
 ]
 ]
 
@@ -443,6 +455,7 @@ Orizzonte
 .font70[
 .hl[Grazie] a una migliore conoscenza della statistica
 ]
+
 ##### Dalla cultura dello scoprire
 .img-left[![](immagini/omino-lente2.png)]
 
@@ -451,9 +464,12 @@ Orizzonte
 .pull-right[
 .font70[
 ~~Cultura del pretendere~~
+
 ]
+
 ##### Alla cultura del .hl[**confronto**]
 .img.left[![](immagini/confusione_omini3.png)]
+
 ]
 
 --
@@ -477,7 +493,7 @@ class: hide-logo, inverse, center, middle
 ---
 class: clear
 
-.font90[
+.font70[
 .left-column[
 #### Disoccupati ai sensi dell'ILO .hl[vs.] disoccupati iscritti
 ]
@@ -492,7 +508,7 @@ class: clear
 ---
 class: clear
 
-.font80[
+.font70[
 .left-column[
 #### Disoccupati iscritti vs. disoccupati ai sensi dell'ILO
 #### .hl[Percezione] dell'evoluzione della disoccupazione nei prossimi 12 mesi
@@ -514,16 +530,16 @@ class: clear
 
 
 .left-column[
-##### Fino a ieri
+###### Fino a ieri
 
+&lt;br&gt;
 .img-left[![](immagini/poppins-bag.gif)]
-
 ]
 
 --
 
 .right-column[
-##### Regole magiche
+#### Un numero più una fonte "sicura" = Regola magica
 *"Prima di fare il bagno bisogna aspettare almeno 30 minuti"*
 
 ]
@@ -533,18 +549,22 @@ class: clear
 .right-column[
 &lt;br&gt;
 
-##### O luoghi comuni
+###### La statistica dei... luoghi comuni
 *"Se vuoi ispirare fiducia, dai molti dati statistici. Non importa che siano comprensibili, basta che siano in quantità sufficiente"*  
 (Lewis Carroll)
 
+
+Altri esempi: [*''raccolta'' Istat*](https://www.istat.it/it/archivio/16514)
+
 ]
+
 
 ---
 
 class: clear
 
 .left-column[
-##### Da domani
+###### Da domani
 
 &lt;br&gt;
 .img-left[![](immagini/poppins-bag-kids.gif)]
@@ -553,8 +573,8 @@ class: clear
 --
 
 .right-column[
-##### La regola delle 3C
-##### .mid-warm-grey[CUBe's formula: `*Check x understand x be aware*`]
+#### La regola delle 3C
+#### .mid-warm-grey[CUBe's formula: `*Check x understand x be aware*`]
 1. .hl[**C**ontrollare], dato e percezioni sono confrontabili? E il contrario?  
 .mid-warm-grey[*[**C**heck]*]  
 2. .hl[**C**omprendere il senso], l'uso dei dati ha senso rispetto al contesto?  
@@ -568,13 +588,9 @@ class: clear
 
 class: clear
 
-.font80[
 .left-column[
-#### dalla cultura del pretendere
-#### alla cultura del confronto
-#### alla conclusione
+###### Ultimi appunti
 
-]
 ]
 
 
@@ -589,14 +605,38 @@ Il salto culturale, cioè passare dalla cultura del pretendere alla cultura del 
 .font60[
 &lt;br&gt;
 &lt;br&gt;
-Contatto:      
-[eric.stephani@ti.ch](mailto:eric.stephani@ti.ch)  
+&lt;br&gt;
+&lt;br&gt;
 &lt;br&gt;
 .mid-warm-grey[
-Slides create con R, via [**{xaringan}**](https://github.com/yihui/xaringan)
+Slides create con R via: [{r-project}](https://www.r-project.org) e [{xaringan}](https://github.com/yihui/xaringan)
+
 ]
 ]
 ]
+
+---
+
+class: title-slide-fin clear hide-logo
+
+![](immagini/logo_ultima.png)
+
+# Contatti
+
+.font70[
+.pull-right2[
+.white[ ]  
+Eric Stephani  
+[eric.stephani@ti.ch](mailto:eric.stephani@ti.ch)  
+
+.white[ ]  
+Repubblica e Canton Ticino  
+Divisione delle risorse  
+**Ufficio di statistica**  
+[www.ti.ch/ustat](http://www.ti.ch/ustat)
+]
+]
+
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
