--- a/index.html
+++ b/index.html
@@ -531,7 +531,6 @@ class: clear
 
 .left-column[
 ###### Fino a ieri
-
 &lt;br&gt;
 .img-left[![](immagini/poppins-bag.gif)]
 ]
@@ -539,25 +538,30 @@ class: clear
 --
 
 .right-column[
-#### Un numero più una fonte "sicura" = Regola magica
+###### Un numero più una fonte "sicura" =&gt; Regola magica
+.font80[
 *"Prima di fare il bagno bisogna aspettare almeno 30 minuti"*
-
+]
 ]
 
 --
 
 .right-column[
-&lt;br&gt;
 
 ###### La statistica dei... luoghi comuni
-*"Se vuoi ispirare fiducia, dai molti dati statistici. Non importa che siano comprensibili, basta che siano in quantità sufficiente"*  
-(Lewis Carroll)
+.font80[
+*"Se vuoi ispirare fiducia, dai molti dati statistici. Non importa che siano comprensibili, basta che siano in quantità sufficiente"*
+  Lewis Carroll   
 
+*"Non mi fido molto delle statistiche, perché statisticamente un uomo con la testa nel forno acceso e i piedi nel congelatore ha una temperatura media"*
+  Charles Bukowski  
 
-Altri esempi: [*''raccolta'' Istat*](https://www.istat.it/it/archivio/16514)
+&lt;br&gt;
+Altri esempi:  
+-&gt; [*''raccolta'' Istat*](https://www.istat.it/it/archivio/16514)
 
 ]
-
+]
 
 ---
 
@@ -565,7 +569,6 @@ class: clear
 
 .left-column[
 ###### Da domani
-
 &lt;br&gt;
 .img-left[![](immagini/poppins-bag-kids.gif)]
 ]
@@ -573,15 +576,19 @@ class: clear
 --
 
 .right-column[
-#### La regola delle 3C
-#### .mid-warm-grey[CUBe's formula: `*Check x understand x be aware*`]
-1. .hl[**C**ontrollare], dato e percezioni sono confrontabili? E il contrario?  
-.mid-warm-grey[*[**C**heck]*]  
-2. .hl[**C**omprendere il senso], l'uso dei dati ha senso rispetto al contesto?  
-.mid-warm-grey[*[**U**nderstand  the context]*]  
-3. Essere .hl[**c**onsapevoli], sappiamo perché stiamo usando (o vorremmo usare) questa fonte di dati?  
-.mid-warm-grey[*[**Be** aware of the source]*]
+###### La regola delle 3C
+###### .mid-warm-grey[CUBe's formula: `*Check x understand x be aware*`]
+.font80[
+1. .hl[**C**ontrollare], .mid-warm-grey[*[**C**heck]*]  
+dato e percezioni sono confrontabili? E il contrario?  
+.white[-]  
+2. .hl[**C**omprendere il senso], .mid-warm-grey[*[**U**nderstand  the context]*]  
+l'uso dei dati ha senso rispetto al contesto?  
+.white[-]  
+3. Essere .hl[**c**onsapevoli], .mid-warm-grey[*[**Be** aware of the source]*]  
+sappiamo perché stiamo usando (o vorremmo usare) questa fonte di dati?
 
+]
 ]
 
 ---
