--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@ class: title-slide clear
 
 ##### *Melide, 18 novembre 2021*
 
+---
+class: clear, middle
+
+.font110[
+*"Non mi fido molto delle statistiche, perché un uomo con la testa nel forno acceso e i piedi nel congelatore statisticamente  ha una temperatura media"*
+]
+.dark-warm-grey[
+.font80[
+Charles Bukowski
+]
+]
 
 ---
 class: clear, middle
@@ -40,6 +51,8 @@ class: clear, middle
 #### Dati, statistica pubblica e giornalismo
 
 --
+
+
 
 &lt;br&gt;
 ### ***Vademecum***
@@ -51,8 +64,6 @@ class: clear, middle
 
 --
 3. La *statistica pubblica e il giornalismo*, con quale ruolo?  
-
-
 
 ---
 
